--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,19 @@
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://dev.notepubs.com:9898/farm?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://db.moagroup.co.kr:9898/farm?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
-spring.datasource.username=farm
-spring.datasource.password=0622
+app.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##spring.datasource.url=jdbc:mysql://dev.notepubs.com:9898/farm?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+##spring.datasource.url=jdbc:mysql://db.moagroup.co.kr:9898/farm?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+##spring.datasource.url=jdbc:mysql://192.168.0.172:5000/farm?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://192.168.0.172:5000/farm?autoReconnect=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowMultiQueries=true&useUnicode=true
+app.datasource.url=jdbc:mysql://127.0.0.1:3306/farm?autoReconnect=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowMultiQueries=true&useUnicode=true
+app.datasource.username=root
+app.datasource.password=1234
+
+#app.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#app.datasource.url=jdbc:mysql://192.168.0.172:5000/farm?autoReconnect=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&allowMultiQueries=true&useUnicode=true
+#app.datasource.username=dhj
+#app.datasource.password=1
+
+
+#logging.level.org.springframework=INFO
