--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,12 @@
       		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-		</dependency>
+	  </dependency>
+	  <dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.6.0</version>
+	  </dependency>
    </dependencies>
 
 	<build>
