--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
-
+server.port = 8000
 ##spring.datasource.url=jdbc:mysql://dev.notepubs.com:9898/farm?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 ##spring.datasource.url=jdbc:mysql://db.moagroup.co.kr:9898/farm?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
 ##spring.datasource.url=jdbc:mysql://192.168.0.172:5000/farm?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
